src/index.css
* {
    box-sizing: border-box;
}

:root {
    /* colors */
    --sky-blue: #5ecce4;
    --cosmic-cobalt: #383387;
    --iris: #524ad0;
    --blue-violet: #8931e0;
    --pink: #d752a0;
    --indian-red: #d05656;
    --white: #ffffff;
    --smoke-black: #121212;
    --dark-gray: #414141;
    --light-gray: #515151;
    --green: #429708;
    --light-green: #2aff7c;
    /* fonts */
    --Merriweather: 'Merriweather Sans', sans-serif;
    --Raleway: 'Raleway', sans-serif;
    /* font sizes */
    --whaat: 3.5rem;
    --sub-header: 3rem;
    --giant: 2.5rem;
    --big: 1.8rem;
    --mid: 1.2rem;
    --normal: 1rem;
    --text: 0.8rem;
    min-height: 100vh;
    overflow-y: scroll;
}

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: var(--smoke-black);
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.come-down {
    animation: comeDown 0.5s linear forwards;
}

.go-right {
    margin-left: auto;
    animation: goRight 0.2s linear forwards;
}

.position {
    position: fixed !important;
    margin-top: 64px !important;
    margin-left: 88.4px !important;
}

.modal {
    max-width: calc(0.83 * 1040px) !important;
    width: calc(0.84 * 1040px) !important;
}

@keyframes goRight {
    0% {
        width: 100%;
    }
    100% {
        width: 83%;
    }
}

@keyframes comeDown {
    0% {
        opacity: 0;
    }
    50% {
        opacity: 0;
        transform: translateY(-20px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

@keyframes play {
    100% {
        background-position: -791px;
    }
}

@keyframes fade {
    100% {
        opacity: 1;
    }
}

